style.css
@font-face {
    font-family: Bebas;
    src: url(assets/fonts/Bebas-Regular-webfont.woff);
}

html {
    margin:0;
    padding:0;
}
body {
    margin:0;
    font-family: Arial, Helvetica, sans-serif;
    /* overflow: hidden; */
}

/* container */
.container {
    height: 100vh;
    display: grid;
    grid-template-areas: "nav content";
    overflow-x: hidden;
}

/* navbar */
.nav {
    width: 28vw;
    height: 100vh;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items:center;
    text-align: space-between;
    background-color: rgba(18,4,51,.4);
    grid-area: nav;
    box-sizing: border-box;
    position: fixed;
}
.logo {
    width: 28vw;
    height: 12vw;
    text-align: center;
    background-size: cover;
    line-height: 12.5vw;
    margin: 4px 0 0 -50px;
}
.logo a {
    text-decoration: none;
    color:rgb(127,193,192);
    font-family:Bebas, arial, sans-serif;
    font-size: 4vw;
    letter-spacing: .3vw;
    font-weight: bold;
    text-shadow: 1px 1px 1px rgba(0,0,0,.4);
    text-transform: uppercase;
}
.logo img {
    width: 28vw;
    height: 12vw;
}
.nav .toggle {
    opacity: 1;
    bottom: -100vh;
}
.nav-items {
    width: 25vw;
    height: 80vh;
    padding:0;
    list-style: none;
    display: flex;
    flex-direction: column;
    justify-content:space-between;
    text-align: center;
    padding: 0 5px;
    transition: all 1s ease;
}
.nav-items li a {
    text-decoration: none;
    color: rgba(255,255,255,.6);
    font-family: Arial, Helvetica, sans-serif;
    font-size:1.8vw;
    font-weight:bold;
    letter-spacing: .3vw;
    word-spacing: .3vw;
    text-transform: uppercase;
}
.nav-items li a:hover {
    color: rgba(255,255,255,.8);
    /* color: rgb(127,193,192);  */
}
.navitems li a:hover {
    color: white;
}
.hamburger {
    width:30px;
    height:30px;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    align-items: center;
    /* background-color: azure; */
    position: relative;
    transition: all 1s ease;
    margin: 10px -40px 10px 0;
}
.hamburger span {
    display: none;
    width: 28px;
    height: 3px;
    background-color: blue;
    border-radius:3px;
    transition: all 0.8s ease;
}
.hamburger input {
    position: absolute;
    width: 30px;
    height: 30px;
    opacity: 0;
    transform: translateX(-1px);
    z-index: 10;
}
.hamburger span:nth-child(2) {
    transform-origin: 0 0;
}
.hamburger span:last-child {
    transform-origin: 0 100%;
}
.hamburger input:checked ~ span:nth-child(2) {
    transform: rotate(45deg) translate(-1.5px, -1px);
}
.hamburger input:checked ~ span:last-child {
    transform: rotate(-45deg);
}
.hamburger input:checked ~ span:nth-child(3) {
    opacity:0;
}

/* content */
.content {
    grid-area: content;
    color: rgb(127,193,192);
    text-shadow: 1px 1px 1px rgba(0,0,0,.8);
    background-color: rgba(255, 9, 136, 0.2);
    margin-bottom: -30px;
    background-image: url(assets/imgs/bg/bg.jpg);
    background-size: cover;
}
.about, .service, .experience, .responsibility, .contact {
    height: 100vh;
    text-align: center;
    display: flex;
    flex-direction: column;
    justify-content: center;
    margin-left: 28vw;
    background-color: rgba(255,255,255,.2);
    padding: 0 30px;
}
h1 {
    font-size: 5.5vw;
    margin: 0;
}
/* about */
.about, .experience, .contact {
    background-color: rgba(255,255,255,.1);
}
.about {
    overflow-y: hidden;
}
.about h1, .about p {
    opacity:0;
    transition: ease-out 2s;
}
.about h1 {
    background-image: url(assets/patterns/kobu-agency-7okkFhxrxNw-unsplash.jpg);
    background-size: cover;
    background-position: top;
    background-attachment: fixed;
    mix-blend-mode: difference;
    filter: contrast(120%), hue-rotate(123deg);
    font-family: Righteous, cursive;
    transform: translateX(-500px);
}
.about p {
    font-size: 2.3vw;
    color: rgba(255,255,255,.9);
    background: linear-gradient(to top, rgba(21, 24, 207,.6), rgba(255, 0, 140,.6));
    padding: 30px;
    box-shadow: 2px 2px 2px rgba(0,0,0,.4);
    transform: translateX(500px);
}
.about .sliding {
    transform: translateX(0px);
    opacity:1;
}
/* service */
.box {
    display: grid;
    grid-template-areas: 
        "serv1 serv1 serv1 serv2"
        "serv3 serv3 serv4 serv2"
        "serv3 serv3 serv4 serv2";
    grid-template-columns: repeat(4, 1fr);
    grid-template-rows: repeat(3, 1fr);
    justify-content: center;
    align-items: normal;
    background-color: rgb(21, 24, 207);
    box-shadow: 2px 2px 2px rgba(0,0,0,.4);
    position: relative;
    box-sizing: border-box;
}
.card {
    cursor: pointer;
    box-shadow: 2px 2px 2px rgba(0,0,0,.4);
    padding: 10px;
    box-sizing: border-box;
}
.box .serv1, .box .serv2, .box .serv3, .box .serv4 {
    align-self: center;
}
.box .serv1 {
    grid-area: serv1;
    background-color: rgba(23, 224, 224, .6);
    background: radial-gradient(rgba(219, 16, 111, 0.7), rgba(23, 224, 224, .6));
}
.box .serv2 {
    grid-area: serv2;
    align-self: end;
    background-color: rgba(9, 128, 128,.6);
    background: radial-gradient(rgba(219, 16, 111, 0.7), rgba(9, 128, 128,.6));
    box-shadow: 2px 2px 2px rgba(0,0,0,.1);
    position: absolute;
    animation: naikTurun 15s ease-in infinite alternate;
}
@keyframes naikTurun {
    from {
        top: 0;
        right: 0;
    }
    to {
        top: calc(100% - 170px);
        right: 0;
    }
}
.box .serv3 {
    grid-area: serv3;
    background-color: rgba(149, 238, 238,.6);
    background: radial-gradient(rgba(219, 16, 111, 0.7), rgba(149, 238, 238,.6))
}
.box .serv4 {
    grid-area: serv4;
    background-color: rgba(0, 255, 255,.6);
    background: radial-gradient(rgba(219, 16, 111, 0.7), rgba(0, 255, 255,.6));
    box-shadow: 2px 2px 2px rgba(0,0,0,.1);
}
.card img {
    width: 5vw;
    opacity: .8;
}
.card p {
    font-size: 3vw;
    margin: 15px 0;
    color: rgba(255,255,255,.7);
    font-family: Bebas, cursive;
}
/* ... */

